--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "start": "node app.js",
+    "prettify": "prettier --write *.js **/*.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.5.1"
   }
 }
